# Hyperliquid-MCP-Updated

./: .gitignore  LICENSE  README.md  pyproject.toml
hyperliquid_mcp_updated/: __init__.py  server.py
